# reel

./: .dockerignore  .gitignore  .prettierignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  app.sh  build.yml  dev.sh  docker-compose.yml  redo.sh  reel.sh  reelx.sh
.reel/demo/: bar.yml  foo.yml
.reel/project/: bundle.yaml
.reel/project/cleanup/: dist.yaml
.reel/reel/composer/: install.yaml  update.yaml
.reel/reel/docker/: build.yaml  properties.yml
demo/base/: .gitignore  .reel.env  .reel.yml  Dockerfile  docker-compose.yml
demo/base/.reel/: properties.yml
demo/base/main/: composer.json  package-lock.json
docs/: commands.md  index.md
docs/commands/: reel.md
main/: composer.json  redo  redo.yml  reel  reel.yml
main/.reel/docker/: build.yml  properties.yml  push.yml
main/.reel/project/: properties.yml
main/commands/docker/: build.yml  push.yml
main/pipelines/docker/: build.yml  push.yml
main/src/: CommandConfig.php  CommandConfigFactory.php  Configuration.php  Configuration.yml  ConfigurationCompiler.php  ConfigurationProcessor.php  ConfigurationProperty.php  ConfigurationPropertyCollection.php  ProcessFactory.php  Project.php  Property.php  Redo.php  Reel.php
main/src/Commands/: DynamicCommand.php  PropertiesCommand.php
main/src/Domain/: Config.php  ConfigDirectory.php  Job.php  JobFactory.php  Property.php  Reel.php  ReelFactory.php
main/tests/: phpunit.xml
src/: main.rs  reel_command.rs  reel_init.rs  reel_setup.rs  reel_update.rs
test/base/: .gitignore  Dockerfile  build.env  build.yml  package-lock.json
(+59 files in other folders)
